syntax = "proto2";

package mws.rng;

import "data.proto";

message DumpPut {
  required bytes k = 1;
  required bytes v = 2;
  required bytes prev = 3;
}

message DumpGet {
  required bytes k = 1;
}

message DumpEn {
  required bytes k = 1;
  required bytes v = 2;
  required bytes nextKey = 3;
}

message DumpGetBucketData { 
  required int32 b = 1;
}

message DumpBucketData {
  required int32 b = 1;
  repeated Data items = 2;
}
